--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -1,1 +1,8 @@
-<p>login works!</p>
+<div class="login-card">
+  <h2>Login</h2>
+  <form [formGroup]="form" (ngSubmit)="login()">
+    <input formControlName="username" placeholder="Username" />
+    <input type="password" formControlName="password" placeholder="Password" />
+    <button type="submit">Login</button>
+  </form>
+</div>
