--- a/src/app/features/cart/cart-item/cart-item.component.html
+++ b/src/app/features/cart/cart-item/cart-item.component.html
@@ -1,1 +1,16 @@
-<p>cart-item works!</p>
+<div class="cart-item">
+    <img [src]="item.image">
+
+    <div class="details">
+      <h4>{{ item.title }}</h4>
+      <p>₹ {{ item.price }}</p>
+
+      <input type="number"
+             [value]="item.quantity"
+             min="1"
+             (input)="onQtyChange($event)">
+
+      <button class="remove" (click)="remove()">Remove</button>
+    </div>
+  </div>
+  `,
