--- a/src/app/features/products/product-details/product-details.component.html
+++ b/src/app/features/products/product-details/product-details.component.html
@@ -1,1 +1,26 @@
-<p>product-details works!</p>
+<app-header></app-header>
+
+  <div class="container" *ngIf="!loading">
+
+    <div class="details" *ngIf="product">
+      <img [src]="product.image">
+
+      <div class="info">
+        <h2>{{ product.title }}</h2>
+        <p class="price">₹ {{ product.price }}</p>
+        <p class="rating">⭐ {{ product.rating.rate }} ({{ product.rating.count }})</p>
+        <p>{{ product.description }}</p>
+
+        <div class="qty">
+          <button (click)="decrease()">−</button>
+          <input type="number" [(ngModel)]="quantity" min="1">
+          <button (click)="increase()">+</button>
+        </div>
+
+        <button class="add-btn" (click)="addItem()">Add to Cart</button>
+      </div>
+    </div>
+
+  </div>
+
+  <app-loader *ngIf="loading"></app-loader>
