--- a/src/app/shared/components/loader/loader.component.html
+++ b/src/app/shared/components/loader/loader.component.html
@@ -1,1 +1,3 @@
-<p>loader works!</p>
+<div class="flex justify-center items-center py-10">
+  <div class="animate-spin rounded-full h-16 w-16 border-t-4 border-b-4 border-indigo-600"></div>
+</div>
