--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -9,14 +9,18 @@
 
     <!-- Desktop Nav -->
     <nav class="hidden md:flex items-center gap-8 text-gray-600 font-medium">
-      <a routerLink="/" class="hover:text-indigo-600 transition">Home</a>
+      <!-- <a routerLink="/" class="hover:text-indigo-600 transition">Home</a> -->
       <a routerLink="/products" class="hover:text-indigo-600 transition">Products</a>
-      <a routerLink="/cart" class="hover:text-indigo-600 transition">Cart</a>
+      <!-- <a routerLink="/cart" class="hover:text-indigo-600 transition">Cart</a> -->
     </nav>
 
     <!-- Right Controls -->
     <div class="flex items-center gap-5">
-
+        <!-- Logout Button -->
+  <button (click)="logout()"
+          class="px-3 py-1 bg-red-500 hover:bg-red-600 text-white rounded transition">
+    Logout
+  </button>
       <!-- Cart Icon -->
       <a routerLink="/cart" class="relative">
         <svg xmlns="http://www.w3.org/2000/svg"
